--- a/Web/Views/web.config
+++ b/Web/Views/web.config
@@ -17,7 +17,9 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
-        <add namespace="W" />
+        <add namespace="CMS.Web" />
+        <add namespace="CMS.Common" />
+        <add namespace="CMS.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
